# libinput

./: 431.pro  CMakeLists.txt  Makefile  main.cpp  widget.cpp  widget.h
debian/: README.Debian  README.source  changelog  control  copyright  install
src/: CMakeLists.txt  input_device_interface.c  input_device_interface.h  shared.c  shared.h
test/: CMakeLists.txt  main.cpp
